Correct distribution file list
git-svn-id: http://fbug.googlecode.com/svn@861 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/lite/branches/firebug1.2/build.xml
+++ b/lite/branches/firebug1.2/build.xml
@@ -37,7 +37,6 @@
         <tstamp/>
         <property name="build_dir" location="./dist/lite/${VERSION}" />
         <property name="dist_dir" location="${build_dir}/dist" />
-        <property name="FIREBUG-XPI" value="firebug-${VERSION}J${RELEASE}.xpi"/>
     </target>
 
 
@@ -49,6 +48,11 @@
                 <include name="firebug-lite-compressed.js"/>
                 <include name="Source/firebug-lite.js"/>
                 <include name="Source/pi.js"/>
+                 <include name="firebug-lite.css"/>
+                 <include name="firebug.gif"/>
+                 <include name="spacer.gif"/>
+                 <include name="tree_close.gif"/>
+                 <include name="tree.open.gif"/>
             </fileset>
            </copy>
     </target>
