missing fb4cb in distro
git-svn-id: http://fbug.googlecode.com/svn@1250 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/chromebug/branches/chromebug0.4/build.xml
+++ b/chromebug/branches/chromebug0.4/build.xml
@@ -55,6 +55,7 @@ TRUNK=
                 <zipfileset dir="${chromelist.dir}" includes="defaults/**/*"/>
                 <zipfileset dir="${chromelist.dir}" includes="content/**/*"/>
                 <zipfileset dir="${chromelist.dir}" includes="locale/**/*"/>
+            	<zipfileset dir="${chromelist.dir}" includes="fb4cb/**/*"/>
                 <zipfileset dir="${chromelist.dir}" includes="license.txt"/>
                 <zipfileset dir="${chromelist.dir}" includes="chrome.manifest"/>
                 <zipfileset dir="${chromelist.dir}" includes="install.rdf"/>
