update as suggested by woomla
git-svn-id: http://fbug.googlecode.com/svn@1359 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/chromebug/branches/chromebug0.4/build.xml
+++ b/chromebug/branches/chromebug0.4/build.xml
@@ -143,7 +143,7 @@ TRUNK=
         <property name="UPDATEPATH" value="${update.path}" />
         <property name="dist_dir" location="${build_dir}/dist" />
         <property name="XPI" value="chromebug-${FULLVERSION}.xpi"/>
-        <property name="firebug.dir" value="../firebug/branches/firebug${FIREBUG.VERSION}"/>
+        <property name="firebug.dir" value="../../../firebug/branches/firebug${FIREBUG.VERSION}"/>
     </target>
 
     <target name="dev-setup" depends="create-extension-links, expand-templates">
