Update version number
git-svn-id: http://fbug.googlecode.com/svn@3363 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff0.2/build.xml
+++ b/diff/branches/firediff0.2/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <project name="firediff" default="dist">
-  <property name="version" value="0.2a1" />
+  <property name="version" value="0.2" />
 
   <property name="src_dir" location="${basedir}" />
   <property name="dist_dir" location="${basedir}/dist" />
