--- a/firestarter/branches/firestarter0.1/build.xml
+++ b/firestarter/branches/firestarter0.1/build.xml
@@ -38,6 +38,7 @@
         <!-- Copy extension installation files and licence.txt -->
         <copy file="chrome.manifest" todir="${build.dir}"/>
         <copy file="install.rdf" todir="${build.dir}"/>
+        <copy file="license.txt" todir="${build.dir}"/>
 
         <!-- Update release version from ant.properties file -->
         <replace file="${build.dir}/install.rdf" propertyFile="ant.properties">
