Update version information for the 1.0a1 release.
git-svn-id: http://fbug.googlecode.com/svn@4485 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/diff/branches/firediff1.0/build.xml
+++ b/diff/branches/firediff1.0/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <project name="firediff" default="dist">
-  <property name="version" value="0.2.1" />
+  <property name="version" value="1.0a1" />
 
   <property name="src_dir" location="${basedir}" />
   <property name="dist_dir" location="${basedir}/dist" />
